# Scene

./: CMakeLists.txt  README.md
src/: Inspector.qml  Main.qml  OrbitController.qml  Primitive.cpp  Primitive.h  PrimitiveFactory.cpp  PrimitiveFactory.h  Scene.qml  SceneManager.cpp  SceneManager.h  ThreadManager.cpp  ThreadManager.h  main.cpp
